Prueba con imagenes externas

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Julián Carvajal</title>
-    <link rel="icon" type="image/png" sizes="32x32" href="img/icono.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://imgur.com/y96C4rZ">
     <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/Estilos.css">
     <link rel="stylesheet" href="fonts/font-awesome.min.css">
