--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <i class="fa fa-bars boton" aria-hidden="true"></i>
             </div>
              <figure class="logo">
-                <img src="img/Logo-1.png" alt="Logo">
+                <img src="https://imgur.com/8keYSZq" alt="Logo">
             </figure>
             <nav class="menu" id="opciones">
                 <ol>
