cambio en la url de imagenes hero, portafolio y sobre mi

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Julián Carvajal</title>
-    <link rel="icon" type="image/png" sizes="32x32" href="https://imgur.com/y96C4rZ">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://i.imgur.com/y96C4rZ.png">
     <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/Estilos.css">
     <link rel="stylesheet" href="fonts/font-awesome.min.css">
@@ -18,7 +18,7 @@
                 <i class="fa fa-bars boton" aria-hidden="true"></i>
             </div>
              <figure class="logo">
-                <img src="https://imgur.com/8keYSZq" alt="Logo">
+                <img src="https://i.imgur.com/8keYSZq.png" alt="Logo">
             </figure>
             <nav class="menu" id="opciones">
                 <ol>
@@ -52,7 +52,7 @@
             <div class="container">
                 <article class="proyectos">
                     <figure class="port-contenedor">
-                        <img class="elementos" src="img/computador-2.jpg" alt="Proyectos">
+                        <img class="elementos" src="https://i.imgur.com/W1xlJIz.jpeg" alt="Proyectos">
                     </figure>
                     <div class="container-portafolio">
                         <h3>Lorem ipsum</h3>
@@ -61,7 +61,7 @@
                 </article>
                 <article class="proyectos">
                     <figure class="port-contenedor">
-                        <img class="elementos" src="img/libro-gafas.jpg" alt="Proyectos">
+                        <img class="elementos" src="https://i.imgur.com/jwHn4Gv.jpeg" alt="Proyectos">
                     </figure>
                     <div class="container-portafolio">
                         <h3>Lorem ipsum</h3>
@@ -70,7 +70,7 @@
                 </article>
                 <article class="proyectos">
                     <figure class="port-contenedor">
-                        <img class="elementos" src="img/libro-hojas.jpg" alt="Proyectos">
+                        <img class="elementos" src="https://i.imgur.com/oQlgcy4.jpeg" alt="Proyectos">
                     </figure>
                     <div class="container-portafolio">
                         <h3>Lorem ipsum</h3>
@@ -79,7 +79,7 @@
                 </article>
                 <article class="proyectos">
                     <figure class="port-contenedor">
-                        <img class="elementos" src="img/codigo.jpg" alt="Proyectos">
+                        <img class="elementos" src="https://i.imgur.com/gJbK5dO.jpeg" alt="Proyectos">
                     </figure>
                     <div class="container-portafolio">
                         <h3>Lorem ipsum</h3>
@@ -95,7 +95,7 @@
         <h2>Sobre mí</h2>
         <div class="yo">
             <figure class="imagen-escritorio">
-                <img class="imagen-yo" src="img/escritorio-1.jpg">
+                <img class="imagen-yo" src="https://i.imgur.com/wlkGgBW.jpeg">
             </figure>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat ea asperiores doloribus quisquam blanditiis qui id quo velit esse consectetur nisi mollitia enim ab nesciunt, molestias hic nostrum ipsam. Quidem!
