Url online de todas las imágenes

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <div class="tecnologica">
             <h2>Tecnologías</h2>
             <figure class="htmlycss">
-                <img src="img/Tecnologías.png">
+                <img src="https://i.imgur.com/EveK9hM.png">
             </figure>
             <div class="habilidades">
                 <p class="primero">Responsive Desing</p>
