Cambio del orden de la sección sobre mi, imagenes más ligeras y dos links funcionales

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Julián Carvajal</title>
-    <link rel="icon" type="image/png" sizes="32x32" href="https://i.imgur.com/y96C4rZ.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://i.imgur.com/fMncxEv.png">
     <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/Estilos.css">
     <link rel="stylesheet" href="fonts/font-awesome.min.css">
@@ -18,7 +18,7 @@
                 <i class="fa fa-bars boton" aria-hidden="true"></i>
             </div>
              <figure class="logo">
-                <img src="https://i.imgur.com/8keYSZq.png" alt="Logo">
+                <img src="https://i.imgur.com/vtRNwXW.png" alt="Logo">
             </figure>
             <nav class="menu" id="opciones">
                 <ol>
@@ -45,6 +45,20 @@
             </h1>
         </section>
 
+
+    <!-- Sobre mí -->
+    <section class="info-container" id="sobremi">
+        <h2>Sobre mí</h2>
+        <div class="yo">
+            <figure class="imagen-escritorio">
+                <img class="imagen-yo" src="https://i.imgur.com/NTweldF.jpg">
+            </figure>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat ea asperiores doloribus quisquam blanditiis qui id quo velit esse consectetur nisi mollitia enim ab nesciunt, molestias hic nostrum ipsam. Quidem!
+            </p>
+        </div>
+    </section>
+    
     <!-- Portafolio -->
     <section class="fondo-portafolio" id="portafolio">
         <div class="portafolio">
@@ -52,7 +66,7 @@
             <div class="container">
                 <article class="proyectos">
                     <figure class="port-contenedor">
-                        <img class="elementos" src="https://i.imgur.com/W1xlJIz.jpeg" alt="Proyectos">
+                        <img class="elementos" src="https://i.imgur.com/5yaDhRi.jpg" alt="Proyectos">
                     </figure>
                     <div class="container-portafolio">
                         <h3>Lorem ipsum</h3>
@@ -61,7 +75,7 @@
                 </article>
                 <article class="proyectos">
                     <figure class="port-contenedor">
-                        <img class="elementos" src="https://i.imgur.com/jwHn4Gv.jpeg" alt="Proyectos">
+                        <img class="elementos" src="https://i.imgur.com/EHhUKTa.jpg" alt="Proyectos">
                     </figure>
                     <div class="container-portafolio">
                         <h3>Lorem ipsum</h3>
@@ -70,7 +84,7 @@
                 </article>
                 <article class="proyectos">
                     <figure class="port-contenedor">
-                        <img class="elementos" src="https://i.imgur.com/oQlgcy4.jpeg" alt="Proyectos">
+                        <img class="elementos" src="https://i.imgur.com/qJsv2zB.jpg" alt="Proyectos">
                     </figure>
                     <div class="container-portafolio">
                         <h3>Lorem ipsum</h3>
@@ -79,7 +93,7 @@
                 </article>
                 <article class="proyectos">
                     <figure class="port-contenedor">
-                        <img class="elementos" src="https://i.imgur.com/gJbK5dO.jpeg" alt="Proyectos">
+                        <img class="elementos" src="https://i.imgur.com/XJuOkvw.jpg" alt="Proyectos">
                     </figure>
                     <div class="container-portafolio">
                         <h3>Lorem ipsum</h3>
@@ -89,26 +103,13 @@
             </div>
         </div>
     </section>
-
-    <!-- Sobre mí -->
-    <section class="info-container" id="sobremi">
-        <h2>Sobre mí</h2>
-        <div class="yo">
-            <figure class="imagen-escritorio">
-                <img class="imagen-yo" src="https://i.imgur.com/wlkGgBW.jpeg">
-            </figure>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat ea asperiores doloribus quisquam blanditiis qui id quo velit esse consectetur nisi mollitia enim ab nesciunt, molestias hic nostrum ipsam. Quidem!
-            </p>
-        </div>
-    </section>
-
+    
     <!-- Tecnologías -->
     <section class="tecnologias" id="tecnologias">
         <div class="tecnologica">
             <h2>Tecnologías</h2>
             <figure class="htmlycss">
-                <img src="https://i.imgur.com/EveK9hM.png">
+                <img src="https://i.imgur.com/wTvdkm7.png">
             </figure>
             <div class="habilidades">
                 <p class="primero">Responsive Desing</p>
@@ -138,8 +139,8 @@
                 <h3>Contacto</h3>
                 <div class="enlaces">
                     <a href="" class="whatsapp link">+57 302 268 9532</a>
-                    <a href="" class="linkedin link">Julián Carvajal</a>
-                    <a href="" class="github link">Julián Carvajal</a>
+                    <a href="https://www.linkedin.com/in/julian-carvajal-18bb441a0/" class="linkedin link">Julián Carvajal</a>
+                    <a href="https://github.com/JulianCarvajal" class="github link">Julián Carvajal</a>
                     <a href="" class="twitter link">@Jul_carvajal19</a>
                     <a href="" class="facebook link">Julián Carvajal</a>
                     <a href="" class="instagram link">@julianc_carvajal</a>
